<resources>
    <string name="app_name">Major project</string>
    <string name="introduction">Introduction</string>
    <string name="technology_used">Technology Used</string>
    <string name="working_module">Module</string>
    <string name="footer">Developed by <b>"android TECHIES"</b> OF GTBIT</string>
    <string name="it">IT</string>
    <string name="cse">CSE</string>
    <string name="ece">ECE</string>
    <string name="eee">EEE</string>
    <string name="title_one_it">
        Hinton</string>
    <string name="title_two_it">
        Analyst</string>
    <string name="title_three_it">
        Autonmont</string>
    <string name="title_four_it">
        Market BASKET ANALYSIS</string>
    <string name="title_five_it">
        Lambee: 3D Navigation of the Web</string>
    <string name="title_six_it">
        AutoPass (Toll tax collection system)</string>
    <string name="title_seven_it">
        Porto Serugo’s Safe Driver Predition</string>
    <string name="title_eight_it">
        Smart Garbage Monitoring System using Internet of Things(IOT)</string>
    <string name="title_nine_it">
        Biometric authentication</string>
    <string name="title_ten_it">
        Web Scrapping and CTR Score Analysis</string>
    <string name="title_eleven_it">
        Coding Ground</string>
    <string name="title_twelve_it">
        Remote Vehicle Monitoring System</string>
    <string name="title_thirteen_it">
        RETAIL DATA ANYLYSIS USING HADOOP</string>
    <string name="title_fourteen_it">
        IOT based Patient Health Monitoring System and Smart Medicine Box</string>
    <string name="title_fifteen_it">
        Smart Automated irrigation system</string>
    <string name="title_sixteen_it">
        Smart Card System Using RFID Tags</string>
    <string name="title_seventeen_it">
        STEGANOGRAPHY</string>
    <string name="title_eighteen_it">
        Enhancing security of image and text </string>
    <string name="title_ninteen_it">
        Crypter </string>
    <string name="title_twenty_it">
        Tow detection and anti-accident system</string>
    <string name="title_twentyone_it">
    WORD TO VECTOR
    </string>
    <string name="title_twentytwo_it">
        FOG COMPUTING</string>
    <string name="title_twentythree_it">
        Gideon Personal Assistant
    </string>
    <string name="title_twentyfour_it">
        Fire Fighting Robot </string>
    <string name="title_twentyfive_it">
        Motion Detection System Using Matlab </string>
    <string name="title_twentysix_it">
        Intelligent Home </string>
    <string name="title_twentyseven_it">
        Student smart payment
    </string>
    <string name="techno_one_it">
        Python,OpenCV,JavaScript,HTML,CSS,Pytorch
    </string>
    <string name="techno_two_it">
        html, php, css, javascript, jquery
    </string>
    <string name="techno_three_it">
        Internet of Things, Arduino, PHP, Javascript
    </string>
    <string name="techno_four_it">
        Java ,html, css, jsp, javascript
    </string>
    <string name="techno_five_it">ML + CV: Python\n
            Backend: Python + JS\n
            (Platform)
            ML: Keras + Tensorflow\n
            CV: OpenCV\n
            Web: Socket.io + ScoketProgramming\n
    </string>
    <string name="techno_six_it">
        Android , JSP , MySQL
    </string>
    <string name="techno_seven_it">
        R, R-studio
    </string>
    <string name="techno_eight_it">
        Software- Arduino IDE, Blynk, LuaTool\n
        Hardware- NodeMCU, Jumper wires, 2x AA Batteries,Ultrasonic Sensor, Plastic container
    </string>
    <string name="techno_nine_it">
        Operating System :
        Window 2000, XP\n
        Presentation layer : Java,
        Servlets, JSP\n
        Database : My SQL\n
        Documentation Tool :Ms
        Office\n
    </string>
    <string name="techno_ten_it">
        PHP, HTML, CSS, Javascript and SQL
    </string>
    <string name="techno_eleven_it">
        Java, JSP,HTML,SQL</string>
    <string name="techno_twelve_it">
         Python
    </string>
    <string name="techno_thirteen_it">
         Hadoop , Hive , Pig , Sqoop
    </string>
    <string name="techno_fourteen_it">
        Embedded C,
Amazon web service

    </string>
    <string name="techno_fifteen_it">
        Language used Embedded C, Java and SQL.\n
Platform used Arduino Uno IDE, Android Studio, SQLite, Thingspeak (Cloud based platform)

    </string>
    <string name="techno_sixteen_it">
        A Java based desktop application which will provide user interface to interact with the client using RFID tags which is nothing but a unique card containing electronically stored information that is assigned to the student and the same system is used to store and process student related information using RFID tags via scanning these tags.
    </string>
    <string name="techno_seventeen_it">
        MATLAB
    </string>
    <string name="techno_eighteen_it">
        Java
    </string>
    <string name="techno_ninteen_it">
    Django ,python3.5, AJAX, js
    </string>
    <string name="techno_twenty_it">
        Embedded C
    </string>
    <string name="techno_twentyone_it"> Python\n
Platform: ATOM
</string>
    <string name="techno_twentytwo_it">Operating System - Windows 95/98/2000/XP /7/10/OS
 Application Server - Tomcat5.0/6.X
 Front End - HTML, Java, Jsp
 Scripts - JavaScript.
 Server side Script - Java Server Pages.
 Database - Mysql
 Database Connectivity - JDBC </string>
    <string name="techno_twentythree_it">
        VB.NET, JSON, AJAX, XML
    </string>
    <string name="techno_twentyfour_it">
   Language used : C programming
Platform used : Kiel micro Vision

    </string>
    <string name="techno_twentyfive_it">
   	Language/Platform Used: Matlab
    </string>
    <string name="techno_twentysix_it">
        Language Used : C#, arduino coding\n
        Platform(s) Used : Visual Studio for C#, Arduino IDE.

    </string>
    <string name="techno_twentyseven_it">
        Advance java,sql,netbeans ide 8.1
    </string>
    <string name="intro_one_it">Hinton is a fake news generator (video) platform that aims to create
        awareness among the society about how fake new generation is
        possible and it aims to make people believe not to blindly follow
        what is seen on social media platforms like Facebook or Instagram.
        The main working of the project comes in form that we can alter
        facial expressions in a video live up to an extent that it is very
        difficult to distinguish between original and generated video.
        We use ResNet34 model trained to detect 68 points facial
        landmarks on the target video, pix2pix research paper for creating a
        GAN that has 2 neural networks I.e a discriminator and a generator
        both trained on Pytorch, Tensorflow and Keras separately for
        comparisons and then combined to make the final architecture of
        the pix2pix model
    </string>
    <string name="intro_two_it">Analyst is action-packed with latest SEO updates and metric analysis to help you rise
        through the difficulties and hardship you generally face during your Search engine
        ranking process. It takes into account analyzing your website’s usability, mobile
        friendliness, technologies, social signals, visitor count and link metrics to evaluate the
        end score and grade your website. Further, you can even download the generated SEO
        report from your browser onto your mobile or desktop PC by just hitting the
        Download Report button for easy access or even share your score on various social
        media platforms.
    </string>
    <string name="intro_three_it">Automation and Real Time Monitoring are now becoming an integral part of every industrial
        setup. This project proposes an IOT (Internet of Things) based real-time monitoring and automation system
        for a prototype of an industrial setup. This system allows the operator/manager/owner of the plant to monitor
        and control the various industrial appliances of the plant remotely through an interactive web application.
        It also provides various security features, enhances the efficiency of the plant and stores the activities
        of the industrial setup in an extensive database. This project uses Arduino Uno that interfaces with the
        hardware components of the industrial setup and an IOT based Wi-Fi chip known as BOLT to connect the setup to
        the internet through the BOLT cloud. The web application is made totally responsive so as to access the system
        from any internet enabled device and in order to provide fast delivery of any emergency action.
        The major aim of this project is to demonstrate the effectiveness of an IOT based system in increasing the
        security, minimizing the power consumption, providing real time analysis and providing remote access to the

        physical system of the industrial setup using an alternate source of energy.
    </string>
    <string name="intro_four_it">Market Basket Analysis is a modelling technique based upon the theory that if you buy a
        certain group of items, you are more (or less) likely to buy another group of items. Market Basket Analysis is one
        of the most common and useful types of data analysis for marketing and retailing. It checks the items that
        are frequently purchased by customers and offers are send to that customer related to that particular item
        that is frequently purchased through SMPT protocol. In this we are using AR(association Rule).
        AR (Association Rules) is a powerful technique that can search through very large sets of seemingly random
        data to identify various types of patterns.The purpose of market basket analysis is to determine what products
        customers purchase together.  It takes its name from the idea of customers throwing all their purchases into a
        shopping cart (a "market basket") during grocery shopping.
    </string>
    <string name="intro_five_it">
With Project Lambee, we make use of the cheapest interaction tool available to mankind, hands. Making use of advanced Computer Vision Techniques and integrating them with Machine Learning and Deep Learning techniques we can extract meaning out of the normal hand gestures and patterns. Normal hand waves, for example, indicate navigation to either of the directions. Up, down, left, right navigation can be achieved by respective gestures by the index finger, download on the other hand can be achieved by the action of clinching of a fist, zooming via pinch etc.
</string>
    <string name="module_one_it">
        Module 1.\n
        ResNet34 Training Module:-
        This module uses a ResNet34 architecture to train on the 68 point facial landmark detection dataset.\n
        Module 2.\n
        Data Generation Module:-
        This module is used to generate data from an incoming video file.\n
        Module 3.\n
        Generator Network Module:-
        This module is used to make the generator neural network.\n
        Module 4.\n
        Discriminator Network Module:-
        This module is used to make the discriminator neural network.\n
        Module 5.\n
        Pix2pix Module:-
        This module intakes the different architectures and then combines them to form the pix2pix architecture.\n
        Module 6.\n
        API Views:-
        Module that contains API Backend views\n
        Module 7.\n
        Static Files:-
        Module that contains static files of API (frontend)\n
    </string>
</resources>