<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidtechies.majorproject.SplashScreen"
    android:orientation="vertical"
    android:background="#fcfcfc">
    <include layout="@layout/collaptoolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!-- For Defining introduction -->
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"

                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/intro_brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/intro_one_it"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="5dp"
                />
            <!-- For Defining technology -->
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technology_used"
                android:textSize="25sp"

                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tech_brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:text="@string/techno_one_it"
                android:layout_marginTop="5dp"
                />
            <!--Working Module name-->
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_module"
                android:textSize="25sp"

                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/projectModule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:text="@string/module_one_it"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

